<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchTab">
<LinearLayout
    android:id="@+id/layoutForSearchField"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:orientation="horizontal">
    <EditText
        android:id="@+id/textForSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" />
    <ImageButton
        android:id="@+id/buttonForSearch"
        android:src="@drawable/ic_search_black_24dp"
        android:layout_width="match_parent"
        android:layout_weight="0.9"
        android:layout_height="wrap_content"/>
</LinearLayout>
    <TextView
        android:id="@+id/noSearchResultsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Результатов не найдено"
        android:textSize="15sp"
        android:layout_below="@+id/layoutForSearchField"/>
<androidx.recyclerview.widget.RecyclerView
    android:layout_below="@+id/layoutForSearchField"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rv">

</androidx.recyclerview.widget.RecyclerView>


</RelativeLayout>