<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <de.blox.graphview.GraphView
            android:id="@+id/graph"
            app:maxZoom="500.0"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </de.blox.graphview.GraphView>
    </LinearLayout>
    <include layout="@layout/search_bar"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/gotoLine"
        android:layout_width="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        app:srcCompat="@drawable/ic_timeline_black_24dp" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/filters"
        android:backgroundTint="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_above="@id/gotoLine"
        android:layout_alignParentRight="true"
        app:srcCompat="@drawable/ic_filter_list_black_24dp" />

</RelativeLayout>